--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -805,10 +805,23 @@ whr_ttest %>%
 t.test(`Happiness Score` ~ Region, data = whr_ttest, alternative = "less", paired = FALSE, conf.level = 0.95)
 
 t.test(`Happiness Score` ~ Region, data = whr_ttest, alternative = "two.sided", paired = FALSE, conf.level = 0.95)
-```
-Аргумент `alternative` обозначает, какова наша альтернативная гипотеза (противоположная нулевой): что средние в группых *не равны* или что среднее в одной из групп *меньше или больше,* чем в другой. Аргумент `paired` указывает, нужно ли проводить зависимый т-тест. В данном случае, у нас независимые выборки, и зависимый т-тест не нужен.
 
-Нам может пригодиться знать и другой вариант записи т-теста и его непараметрических аналогов -- не через указание переменных из данных (обратите внимание -- мы эксплицитно задавали аргумент `data`), а без указания данных, просто передав ему два вектора:
+```
+Аргумент `alternative` обозначает, какова наша альтернативная гипотеза (противоположная нулевой): что средние в группых просто *не равны* или что среднее в одной из групп *меньше или больше,* чем в другой. Аргумент `paired` указывает, нужно ли проводить зависимый т-тест (когда мы используем одну и ту же выборку и делаем на ней несколько измерений). В данном случае, у нас независимые выборки, и зависимый т-тест не нужен.
+
+Как проинтерпретировать эти результаты? Первое, на что мы смотрим -- это p-value (колонка Pr(F)). Если оно меньше установленного уровня $\alpha$, то мы говорим, что *отвергаем нулевую гипотезу, и мы получили статистически значимые резличия*. Если p-value больше или равно $\alpha$ -- *у нас недостаточно свидетельств в пользу альтернативной гипотезы, и мы говорим, что не отвергаем нулевую гипотезу*.
+
+Чем хороша форма записи через %>% -- мы можем сразу внутри одного пайпа и отфильтровать данные, и сделать т-тест! На том же самом примере, только теперь сразу отфильтруем данные и сделаем т-тест на отфильтрованных данных, без создания отдельного датасета `whr_ttest`:
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests %>% 
+  filter(Region == "Central and Eastern Europe" | Region == "Western Europe") %>% 
+  t.test(`Happiness Score` ~ Region, data = ., alternative = "less", paired = FALSE, conf.level = 0.95)  # ставим точку вместо названия датасета
+  
+```
+Обратите внимание -- в функции t.test данные стоят не на первом месте, как нам нужно для того, чтобы использовать нотацию пайпа. Но это довольно просто решается: в любой функции, чтобы использовать ее внутри пайпа, нужно поставить точку в том месте, куда мы хотим передать результат выполнения предыдущей строки пайпа.
+
+Иногда бывает проще все-таки сделать больше действий, но последовательно, поэтому может пригодиться знать и другой вариант записи т-теста и его непараметрических аналогов -- не через указание переменных из данных (обратите внимание -- мы эксплицитно задавали аргумент `data`), а без указания данных, просто передав ему два вектора (я редко использую такой формат записи, но не потому, что он хуже -- я это делаю для экономии времени, и чтобы не запутаться в созданных мной во время работы над учебником переменных):
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 # Фильтруем только те регионы, которые будем проверять
@@ -884,31 +897,13 @@ whr_tests %>%
 # Все то же самое -- но функция называется не t.test(), a wilcox.test()
 
 wilcox.test(whr_ttest$Family ~ whr_ttest$Region, alternative = "less", paired = FALSE, conf.level = 0.95)
+
+whr_ttest %>%
+  ggplot(aes(x=Region, y = Family, fill = Region)) +
+  geom_boxplot() +
+  theme_minimal() +
+  scale_fill_manual(values = wes_palette("Moonrise3"))
 ```
-
-### ANOVA (дисперсионный анализ)
-
-Предобратаем данные: создадим новые переменные, которые уже создавали ранее в домашках, и присоединим табличку за 2016 год к новой табличке за 2019 год. Новые данные сохраним в датасет `whr_tests_hw`
-
-```{r eval=TRUE, echo = TRUE, message = FALSE}
-
-whr <- read_csv("2016.csv")
-whr_2019 <- readxl::read_xls("Chapter2OnlineData2019.xls")
-
-whr_2019 %>%
-  select(`Country name`:`Standard deviation/Mean of ladder by country-year`) -> whr_2019
-
-whr %>%
-  select(Country:`Happiness Score`) %>%
-  right_join(whr_2019, by = c("Country" = "Country name"), multiple = "last") %>% 
-  mutate("top20" = ifelse(`Happiness Rank`<=20, "hehe", "not hehe"),
-         "mean_position" = ifelse(`Happiness Score`>= mean(`Happiness Score`, na.rm = TRUE), "upper", "lower")) -> whr_tests_hw
-
-# View(whr_tests)
-```
-
-
-
 
 ## Задания после семинара 5 {#tasks_sem5}
 
@@ -922,7 +917,7 @@ whr <- read_csv("2016.csv")
 whr_2019 <- readxl::read_xls("Chapter2OnlineData2019.xls")
 
 whr_2019 %>%
-  select(`Country name`:`Standard deviation/Mean of ladder by country-year`) -> whr_2019
+  select(`Country name`:`Negative affect`) -> whr_2019
 
 whr %>%
   select(Country:`Happiness Score`) %>%
@@ -939,9 +934,250 @@ whr %>%
 
 2. На полученном датасете `whr_tests_hw` проведите полностью по всему алгоритму NHST хотя бы один т-тест или его непараметрический аналог: выберете подходящие переменные, сформулируйте гипотезу, сформулируйте $H_0$ и $H_1$, выберете уровень $\alpha$, определите, зависимые или независимые выборки, предобработайте данные, если нужно, и проведите тест сравнения средних на выбранном уровне значимости. Проинтерпретируйте результаты: подтвердилась ли гипотеза?
 
+## Проверка гипоте-2: ANOVA и линейная регрессия
+
+### ANOVA (дисперсионный анализ)
+
+Я хочу внести чуть разнообразия в наши данные, поэтому нашла еще одну [табличку](#https://github.com/elenary/StatsForDA/blob/main/Chapter2OnlineData2019.xls?raw=true), касающуюся World Happiness Report, можно почитать пододробнее [здесь](#https://s3.amazonaws.com/happiness-report/2019/WHR19_Ch2A_Appendix1.pdf) (кстати, этот док, судя по всему, тоже сверстан в R).
+
+Примерно так может выглядеть предобработка реальных (не самых чистых и кривых) данных: я объединяю две таблички (табличка за 2016 год и новая табличка за 2019 год) с помощью функции `right_join` (это значит, что я к правой табличке присоединяю левую, а все то, что осталось в левой не подошедшее к правой -- не берется) из семейства `join`, переименовые колонки и заменяю пробелы на них на нижнее подчеркивание с помощью функции `rename_with`, отбираю только интересующие меня колонки с помощью функции `select`, создаю новые переменные, которые мы уже создавали ранее в домашках, с помощью функции mutate и сохраняю результат в новую табличку в датасет `whr_tests_hw`
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_2019 <- readxl::read_xls("Chapter2OnlineData2019.xls")
+whr <- read_csv("2016.csv")
+
+whr_2019 %>%
+  rename_with(~ gsub(" ", "_", .), .cols = everything()) %>% 
+  select(Country_name:Negative_affect) %>%
+  filter(Year <= 2016) -> whr_2019
+
+whr %>%
+  rename_with(~ gsub(" ", "_", .), .cols = everything()) %>% 
+  select(Country, Happiness_Rank, Happiness_Score) %>%
+  right_join(whr_2019, by = join_by(Country == Country_name), multiple = "last") -> tmp
+
+whr %>%
+  select(Country:Region) %>%
+  right_join(tmp, by = join_by(Country == Country), multiple = "all") %>%
+  mutate("top20" = ifelse(Happiness_Rank<=20, "hehe", "not hehe"),
+         "mean_position" = ifelse(Happiness_Score>= mean(Happiness_Score, na.rm = TRUE), "upper", "lower")) -> whr_tests_hw
+```
 
 
+До этого мы проверяли гипотезу о том, что Happiness Score различаеся в двух регионах: Западаной и Восточной и Центральной Европе. А если я хочу проверить, различаются ли статистически значимо уровень счастья в трех регионах -- Западаной и Восточной и Центральной Европе и в Латинском Америке? Снова обращаемся к изученным нами в прошлом семестре [статистическим критериям](#stats_criteria), всопминаем каринку с деревом выбора статистических тестов https://miro.com/app/board/uXjVOxmKhr8=/. Если у нас ЗП количественная, НП категориальная / категориальные, и нужно провести  3 сравнения и больше -- то мы переходим от т-теста к [ANOVA (дисперсионному анализу)](#anova).
+
+Я буду периодически придерживаться формы записи кода, когда я внутри одного пайпа делаю сразу все -- и фильрацию, и построение графиков или расчет теста, но не забывае, что прежде чем писать все вместе, нужно убедиться, что каждая строчка -- работает. И может быть удобнее на первых порах создавать побольше переменных и записывать туда результаты фильтрации, а потом уже использовать эту переменную -- так будет проще дебажить код. Например, можно сначала отфильтровать данные и записать их в новый датасет (иногда бывает, что без этой формы записи не обойтись)
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>%
+  filter(Region == "Central and Eastern Europe" | Region == "Western Europe" | Region == "Latin America and Caribbean") %>%
+  filter(Year == "2016") -> whr_anova
+```
+
+Вспоминаем допущения для [АНОВЫ](#anova)
+
+Первое -- ЗП должна быть распределена близко к нормальному распределению.
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_anova %>%
+  ggplot(aes(x = Happiness_Score)) +
+  geom_density(color = "#355C7D") +
+  theme_minimal()
+
+whr_anova %>%
+  ggplot(aes(sample = Happiness_Score)) +
+  stat_qq(color = "#355C7D") +
+  geom_qq_line() +
+  theme_minimal()
+```
+
+Допустим, это похоже на нормальное распредедление.
+
+Второе допущение -- гомогенность (гомоскедастичность) дисперсий. Дисперсии должны быть одинаковы в наших группах. Если они будут разными -- это плохо, и нам придется использовать непараметрические аналоги ANOVA. Гомогенность дисперсий проверяется с помощью Levene's Test. Обратите внимание: здесь мы заинтересованы в получении НЕзначимого результата -- потому что если проверка дала значимый результат, то диперсии в группах различаются, а это не ок. Нам понадобится фунция `leveneTest` из пакета `car`
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+options(scipen = 999) # сначала отключим форму записи чисел с большим количество нулей через экспоненту
+
+# install.packages("car")
+library(car)
+leveneTest(Happiness_Score ~ Region, data = whr_anova)
+```
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+aov_model1 <- aov(Happiness_Score ~ Region, data = whr_anova)
+summary(aov_model1)
+```
+
+Смотрми на p-value: оно не значимо, ура! Значит, мы соблюли все допущения, и можем спокойно использовать анову. Мы попробуем построить ее двумя способами: с помощью стандартной функции `aov` и с помощью более функции `ezANOVA` из пакета `ez` с более понятным синтаксисом, но более придирчивой и менее стабильной.
 
 
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+aov_model1 <- aov(Happiness_Score ~ Region, data = whr_anova) #выполняем АНОВУ
+summary(aov_model1) #выводим табличку АНОВЫ
+```
+Как проинтерпретировать эти результаты? Первое, на что мы смотрим -- это p-value (колонка Pr(F)). Если оно меньше установленного уровня $\alpha$, то мы говорим, что *отвергаем нулевую гипотезу, и мы получили статистически значимые резличия*. Если p-value больше или равно $\alpha$ -- *у нас недостаточно свидетельств в пользу альтернативной гипотезы, и мы говорим, что не отвергаем нулевую гипотезу*.
 
+
+Второй вариант построения этого же анализа с помощью функции `ezANOVA.` Она, кстати, сразу делает Levene's test, поэтому у нас две выдачи.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+# install.packages("ez")
+library(ez)
+
+whr_anova %>% 
+  ezANOVA(., Happiness_Score, wid = Country, between = Region)
+```
+
+Если мы сравним результаты -- они будут точно такими же, только вторая функция в колонке ges выдает еще размер эффекта! Это eta squared $\eta^2$, [метрика размера размера эффекта для ANOVA](#sample_size), которую вы так или иначе использовали в домашнем задании в прошлом курсе. Мы видим, что эффект, который мы получили, довольно большой!
+
+Можем посчитать его и отдельно для предыдущей таблички с помощью функции пакета effectsize
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+# install.packages("effectsize")
+library(effectsize)
+
+eta_squared(aov_model1)
+```
+
+Значение будет тем же самым, что и в колонке ges вывода ezANOVA.
+
+Визуализируем результаты. Чаще всего для визуализации ANOVA используются боксплоты или вайолин плоты
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_anova %>%
+  ggplot(aes(x=Region, y = Happiness_Score, fill = Region)) +
+  geom_boxplot() +
+  theme_minimal() +
+  scale_fill_manual(values = wes_palette("FantasticFox1"))
+```
+Или же часто можно встретить графики, на которых отображены только средние
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_anova %>%
+  ggplot(aes(x=Region, y = Happiness_Score, color = Region, group = 1)) +
+  stat_summary(fun = mean, geom = 'point') +
+  stat_summary(fun = mean, geom = 'line') +
+  stat_summary(fun.data = mean_cl_boot, geom = 'errorbar') +
+  theme_minimal() +
+  scale_color_manual(values = wes_palette("FantasticFox1"))
+```
+
+Мы узнали, что ANOVA значима, то есть статистически значимые различия между этими тремя регионами. А как узнать, какие именно регионы вносят значимость? Может ли такое быть, чтоо значимость обеспечивается одним сильно отличающимся от других регионом, в то время как два других не отличаются? Может. Чтобы узнать это, нужно провести [пост-хок тесты](#%D0%BF%D0%BE%D1%81%D1%82-%D1%85%D0%BE%D0%BA%D0%B8-%D0%B8-%D0%BC%D0%BD%D0%BE%D0%B6%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B5-%D1%81%D1%80%D0%B0%D0%B2%D0%BD%D0%B5%D0%BD%D0%B8%D1%8F).
+
+#### Пост-хоки
+
+Пост-хоки представляют собой попарное множественное сравнение всего со всем. Вспоминаем, что когда мы так делаем -- мы рикуем получить статистчиески значимый результат чисто по случайности, потому что очень растет вероятность ошибки первого рода, и нужны поправи на множественные сравнения. Сделать пост=хок анализ можно например  помощью встроенных функций `TukeyHSD` или `pairwise.t.test`
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+TukeyHSD(aov_model1, conf.level=.95)
+pairwise.t.test(whr_anova$Happiness_Score, whr_anova$Region, p.adj = "bonf")
+```
+
+#### Непераметрические аналоги ANOVA
+
+Если наша переменная имеет значительные выбросы, не прошла проверку на нормальность, и дисперсии в группах оказались статистически значимо разные -- значит, мы не можем применять ANOVA. Что делаеть? Проводить аналог ANOVA, тест Краскелла-Уоллиса. Покажу его на тех же данных, которые мы брали для ANOVA, где смотрели разный уровень счастья по регионам.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+kruskal.test(Happiness_Score ~ Region, data = whr_anova)
+```
+
+#### Многофакторная ANOVA
+
+Мы проверили гипотезу с только одной НП -- регион. А если моя гипотеза касается нескольких факторов? Например, хочу проверить гипотезу, что на переменную `Life_Ladder` (аналог `Happiness Score`, показывает результаты опроса, где находятся респонденты по уровню счастья в виде лестницы, у которой 10 ступенек) влияет и регион, и год.
+
+Я вернусь к изначальному датасету и уберу фильтрацию по году.
+
+Все то же самое -- сначала проверим допущения.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>%
+  filter(Region == "Central and Eastern Europe" | 
+           Region == "Western Europe" | 
+           Region == "Latin America and Caribbean") %>%
+  ggplot(aes(x = Life_Ladder)) +
+  geom_density(color = "#355C7D") +
+  theme_minimal()
+
+whr_tests_hw %>%
+  filter(Region == "Central and Eastern Europe" | 
+           Region == "Western Europe" | 
+           Region == "Latin America and Caribbean") %>%
+  ggplot(aes(sample = Life_Ladder)) +
+  stat_qq(color = "#355C7D") +
+  geom_qq_line() +
+  theme_minimal()
+```
+
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>%
+  filter(Region == "Central and Eastern Europe" | 
+           Region == "Western Europe" | 
+           Region == "Latin America and Caribbean") %>%
+  aov(Life_Ladder ~ Region + as.factor(Year), data = .) -> aov_model3
+#на всякий случай сделала as.factor(), он просто превращает число в строку. функции бывают не очень умными и думают, что нужнобрать числовую переменную 
+# как число, даже если задаем ее как группирующую переменную (фактор)
+summary(aov_model3)
+```
+
+Формула записи
+`independent var ~ dependen var 1 + dependent var 2 `
+означает, что я учитывая два фактора независимо друг от друга. Но бывает, что меня интересует взаимодействие факторов: может, в некоторых регионах за эти годы особо ничего не менялось, уровень счастья измеренный как `Life_Ladder` был постоянным, а в каких-то регионах произошел огромный рост (или огромный отрицательный рост) уровня счастья? Тогда мне нужно будет проверить взаимодействие факторов, и формула будет такая:
+`independent var ~ dependen var 1 * dependent var 2 `
+Везде, где меня интересует взаимодействие, вместо плюсика ставлю звездочку.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>%
+  filter(Region == "Central and Eastern Europe" | 
+           Region == "Western Europe" | 
+           Region == "Latin America and Caribbean") %>%
+  aov(Life_Ladder ~ Region * as.factor(Year), data = .) -> aov_model4
+summary(aov_model4)
+```
+Видим, что во втором случае у нас появилась еще одна строчка -- Region:Year. Это как раз взаимодействие двух факторов. И оно, между прочим, значимо! То есть предположение о том, что в разных регионах разная динамика изменения уровня счастья по годам -- верное.
+
+Далее, чтобы определить, что именно было значимо, делаем пост-хоки.
+
+```{r eval=FALSE, echo = TRUE, message = FALSE}
+TukeyHSD(aov_model3, conf.level=.95)
+TukeyHSD(aov_model4, conf.level=.95)
+```
+
+Я не буду выводить табличку -- она получается монструозной из-за того, что мы взяли года, а они начинаются с 2005 года: представьте, сколько там попарных сравнений...
+
+#### ANOVA с повторными измерениями
+
+Вообще-то переменная год -- внутригрупповой фактор. И если быть честными, ее не очень хорошо учитывать так же, как и фактор Регион, иначе мы потеряем много информации. В R ANOVA с повторными измерениями можно сделать, задав дополнительные параметры в функции aov(), либо с уже знакомой нам функцией ezANOVA(), либо с помощью очень похожей функции anova_test()
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>%
+  filter(Region == "Central and Eastern Europe" | 
+           Region == "Western Europe" | 
+           Region == "Latin America and Caribbean") %>%
+  filter(Year > 2010) %>% #возьму года после 2010, чтобы было поменьше
+  drop_na(Life_Ladder, Year) %>% #удаляю пропущенные значения в интересующих меня колонках
+  aov(Life_Ladder ~ Year + Error(Country/Year), .) %>%
+  summary()
+```
+Как задать эту формулу: если фактор появляется несколько раз для одного и того же испытуемого или страны в данном случае, то формула записи будет такой
+`independent var ~ dependen var + Error(ID/dependen var) `
+
+Более человеческий синтаксис у функции anova_test, но она очень чувствительна к данным, и на этих данных, например, не построилась. *Позже я поняла, почему: я забыла сделать проверку на идентичность дисперсий, вот модель и не сходится! Но мне уже лень переписывать..*
+
+```{r eval=FALSE, echo = FALSE, message = FALSE}
+whr_tests_hw %>%
+  filter(Region == "Central and Eastern Europe" | 
+           Region == "Western Europe" | 
+           Region == "Latin America and Caribbean") %>%
+  filter(Year > 2010) %>%
+  drop_na(Life_Ladder, Year) %>% 
+  ezANOVA(., dv = Life_Ladder, wid = Country, within = as.factor(Year))
+```
+
+
+## Задания после семинара 6 {#tasks_sem6}
+
+Проверьте несколько гипотез на датасете `whr_tests_hw` с помощью ANOVA и линейного регресионного анализа: выберете подходящие для этих тестов переменные, сформулируйте гипотезу, сформулируйте $H_0$ и $H_1$, выберете уровень $\alpha$, (если нужно, предобработайте данные), проверьте допущения для тестов.
+
+1. Выберете подходящие переменные, сформулируйте осмысленную гипотезу и проверьте ее с помощью однофакторной ANOVA
+2. Выберете подходящие переменные, сформулируйте осмысленную гипотезу и проверьте ее и проверьте ее с многофакторной ANOVA
+3. Выберете подходящие переменные, сформулируйте осмысленную гипотезу и проверьте ее с помощью ANOVA повторными измерениями
+4. Проведите те же самые проверки гипотез 1-3 с помощью линейного регрессионного анализа.
 
