--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -1002,13 +1002,7 @@ library(car)
 leveneTest(Happiness_Score ~ Region, data = whr_anova)
 ```
 
-```{r eval=TRUE, echo = TRUE, message = FALSE}
-aov_model1 <- aov(Happiness_Score ~ Region, data = whr_anova)
-summary(aov_model1)
-```
-
 Смотрми на p-value: оно не значимо, ура! Значит, мы соблюли все допущения, и можем спокойно использовать анову. Мы попробуем построить ее двумя способами: с помощью стандартной функции `aov` и с помощью более функции `ezANOVA` из пакета `ez` с более понятным синтаксисом, но более придирчивой и менее стабильной.
-
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 aov_model1 <- aov(Happiness_Score ~ Region, data = whr_anova) #выполняем АНОВУ
@@ -1118,9 +1112,9 @@ summary(aov_model3)
 ```
 
 Формула записи
-`independent var ~ dependen var 1 + dependent var 2 `
-означает, что я учитывая два фактора независимо друг от друга. Но бывает, что меня интересует взаимодействие факторов: может, в некоторых регионах за эти годы особо ничего не менялось, уровень счастья измеренный как `Life_Ladder` был постоянным, а в каких-то регионах произошел огромный рост (или огромный отрицательный рост) уровня счастья? Тогда мне нужно будет проверить взаимодействие факторов, и формула будет такая:
-`independent var ~ dependen var 1 * dependent var 2 `
+`dependent var ~ independen var 1 + independent var 2 `
+означает, что я учитываю два фактора независимо друг от друга. Но бывает, что меня интересует взаимодействие факторов: может, в некоторых регионах за эти годы особо ничего не менялось, уровень счастья измеренный как `Life_Ladder` был постоянным, а в каких-то регионах произошел огромный рост (или огромный отрицательный рост) уровня счастья? Тогда мне нужно будет проверить взаимодействие факторов, и формула будет такая:
+`dependent var ~ independen var 1 * independent var 2 `
 Везде, где меня интересует взаимодействие, вместо плюсика ставлю звездочку.
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
@@ -1157,11 +1151,11 @@ whr_tests_hw %>%
   summary()
 ```
 Как задать эту формулу: если фактор появляется несколько раз для одного и того же испытуемого или страны в данном случае, то формула записи будет такой
-`independent var ~ dependen var + Error(ID/dependen var) `
+`dependent var ~ independen var + Error(ID/independen var) `
 
 Более человеческий синтаксис у функции anova_test, но она очень чувствительна к данным, и на этих данных, например, не построилась. *Позже я поняла, почему: я забыла сделать проверку на идентичность дисперсий, вот модель и не сходится! Но мне уже лень переписывать..*
 
-```{r eval=FALSE, echo = FALSE, message = FALSE}
+```{r eval=FALSE, echo = TRUE, message = FALSE}
 whr_tests_hw %>%
   filter(Region == "Central and Eastern Europe" | 
            Region == "Western Europe" | 
