--- a/10-linear_models.Rmd
+++ b/10-linear_models.Rmd
@@ -255,7 +255,7 @@ knitr::include_graphics("docs/images/lr.png")
 
 При подсчете коэффициентов первым высчитывается $b_1$, и он, как видно из формулы, зависит от величины вариативности данных по переменным x и y (стандартных отклонений или дисперсий). **В случае равной вариативности** $b_1$ **является коэффициентом корреляции** $r_{xy}$
 
-### Коэффициент детерминации и доля объясненной изменчивости
+### Коэффициент детерминации и доля объясненной изменчивости {#rsquared}
 
 В линейной регрессии, так же, как и в ANOVA, коэффициент детерминации говорит о **проценте объясненной изменчивости**, то есть как хорошо наша регрессионная модель объясняет изменчивость зависимой переменной.
 
@@ -321,7 +321,7 @@ knitr::include_graphics("docs/images/lr_sum_squares.png")
 
 <p align="center">$\hat y = b_o + b_1x_1 + b_2x_2 + ... + b_nx_n$ </p>
 
-### Допущения для регрессионного анализа
+### Допущения для регрессионного анализа {#assumptions_linreg}
 
 (ЗП и НП измерены в количественной или порядковой шкале)
 
