--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -1170,8 +1170,19 @@ whr_tests_hw %>%
 
 Проверьте несколько гипотез на датасете `whr_tests_hw` с помощью ANOVA и линейного регресионного анализа: выберете подходящие для этих тестов переменные, сформулируйте гипотезу, сформулируйте $H_0$ и $H_1$, выберете уровень $\alpha$, (если нужно, предобработайте данные), проверьте допущения для тестов.
 
-1. Выберете подходящие переменные, сформулируйте осмысленную гипотезу и проверьте ее с помощью однофакторной ANOVA
-2. Выберете подходящие переменные, сформулируйте осмысленную гипотезу и проверьте ее и проверьте ее с многофакторной ANOVA
-3. Выберете подходящие переменные, сформулируйте осмысленную гипотезу и проверьте ее с помощью ANOVA повторными измерениями
+1. Выберете подходящие переменные, сформулируйте осмысленную гипотезу и проверьте ее с помощью однофакторной ANOVA. Проинтерпретируйте результаты: подвердилась ли гипотеза?
+2. Выберете подходящие переменные, сформулируйте осмысленную гипотезу и проверьте ее и проверьте ее с многофакторной ANOVA. Проинтерпретируйте результаты: подвердилась ли гипотеза?
+3. Выберете подходящие переменные, сформулируйте осмысленную гипотезу и проверьте ее с помощью ANOVA c повторными измерениями. Проинтерпретируйте результаты: подвердилась ли гипотеза?
 4. Проведите те же самые проверки гипотез 1-3 с помощью линейного регрессионного анализа.
 
+## Линейный регрессионный анализ {#linreg}
+
+
+
+## Задания после семинара 7 {#tasks_sem7}
+
+1. Отобрать переменные, подходящие для построения линейной регрессии, в данных `whr_tests_hw.csv` 
+2. Построить линейную регрессию на этих переменных, с одним фактором (НП)
+3. Построить линейную регрессию на этих переменных, но уже хотя бы с двумя факторами (НП)
+4. Построить диагностические графики для каждой модели: насколько равной получилась дисперсия остатков для этих моделей? Можно ли доверять результатом этих моделей?
+5. Определеить, какая модель лучше объясняет данные (вариативность ЗП)?
